pytigergraph/1.8/core-functions/edge.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge)[Next](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
  *     * [Overview](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
  *     * [Getting Started](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/)
      * [Installing pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/install)
      * [Connecting to TigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/connection)
      * [pyTigerGraph 101](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/101)
  *     * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)
      * [TigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/base)
      * [AsyncTigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/async_base)
      * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/auth)
      * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/vertex)
      * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge)
      * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query)
      * [UDT Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/udt)
      * [GSQL Interface](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/gsql)
      * [Loading Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/loading)
      * [Path Finding Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/path)
      * [Schema Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/schema)
      * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/utils)
  *     * [GDS Functions](https://docs.tigergraph.com/pytigergraph/1.8/gds/)
      * [Factory Functions](https://docs.tigergraph.com/pytigergraph/1.8/gds/gds)
      * [Data Loaders](https://docs.tigergraph.com/pytigergraph/1.8/gds/dataloaders)
      * [Featurizer](https://docs.tigergraph.com/pytigergraph/1.8/gds/featurizer)
      * [Metrics](https://docs.tigergraph.com/pytigergraph/1.8/gds/metrics)
      * [Splitters](https://docs.tigergraph.com/pytigergraph/1.8/gds/splitters)
      * [Transforms](https://docs.tigergraph.com/pytigergraph/1.8/gds/transforms)
        * [PyTorch Geometric Transforms](https://docs.tigergraph.com/pytigergraph/1.8/gds/pyg_transforms)
        * [NodePiece Transforms](https://docs.tigergraph.com/pytigergraph/1.8/gds/nodepiece_transforms)
      * [Trainer](https://docs.tigergraph.com/pytigergraph/1.8/gds/trainer)
      * [Models](https://docs.tigergraph.com/pytigergraph/1.8/gds/models)
        * [GraphSAGE](https://docs.tigergraph.com/pytigergraph/1.8/gds/graphsage)
        * [NodePiece](https://docs.tigergraph.com/pytigergraph/1.8/gds/nodepiece)
  *     * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.8/ai/copilot)
  *     * [Datasets](https://docs.tigergraph.com/pytigergraph/1.8/datasets/datasets)
      * [Dataset Object](https://docs.tigergraph.com/pytigergraph/1.8/datasets/datasets_object)
  *     * [Visualization](https://docs.tigergraph.com/pytigergraph/1.8/visualization/visualization)
  *     * [Object Oriented Schema](https://docs.tigergraph.com/pytigergraph/1.8/object_oriented_schema/schema-def)
  *     * [Contributing](https://docs.tigergraph.com/pytigergraph/1.8/contributing/)
  *     * [Release Notes](https://docs.tigergraph.com/pytigergraph/1.8/release-notes/)
      * [Legacy Version Documentation](https://docs.tigergraph.com/pytigergraph/1.8/release-notes/legacy-tg-versions)


pyTigerGraph 1.8
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [pyTigerGraph 1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
  * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)
  * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge)


[Edit this Page](https://github.com/tigergraph/pytigergraph-docs/edit/v1.8/modules/core-functions/pages/edge.adoc)
### Contents
  * [getEdgeTypes()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgetypes)
  * [getEdgeType()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgetype)
  * [getEdgeAttrs()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgeattrs)
  * [getEdgeSourceVertexType()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesourcevertextype)
  * [getEdgeTargetVertexType()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgetargetvertextype)
  * [isDirected()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_isdirected)
  * [getReverseEdge()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getreverseedge)
  * [isMultiEdge()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_ismultiedge)
  * [getDiscriminators()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getdiscriminators)
  * [getEdgeCountFrom()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgecountfrom)
  * [getEdgeCount()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgecount)
  * [upsertEdge()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_upsertedge)
  * [upsertEdges()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_upsertedges)
  * [upsertEdgeDataFrame()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_upsertedgedataframe)
  * [getEdges()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedges)
  * [getEdgesDataFrame()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesdataframe)
  * [getEdgesDataframe()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesdataframe_2)
  * [getEdgesByType()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesbytype)
  * [getEdgeStats()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgestats)
  * [delEdges()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_deledges)
  * [edgeSetToDataFrame()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_edgesettodataframe)


# Edge Functions
### Contents
  * [getEdgeTypes()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgetypes)
  * [getEdgeType()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgetype)
  * [getEdgeAttrs()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgeattrs)
  * [getEdgeSourceVertexType()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesourcevertextype)
  * [getEdgeTargetVertexType()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgetargetvertextype)
  * [isDirected()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_isdirected)
  * [getReverseEdge()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getreverseedge)
  * [isMultiEdge()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_ismultiedge)
  * [getDiscriminators()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getdiscriminators)
  * [getEdgeCountFrom()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgecountfrom)
  * [getEdgeCount()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgecount)
  * [upsertEdge()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_upsertedge)
  * [upsertEdges()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_upsertedges)
  * [upsertEdgeDataFrame()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_upsertedgedataframe)
  * [getEdges()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedges)
  * [getEdgesDataFrame()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesdataframe)
  * [getEdgesDataframe()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesdataframe_2)
  * [getEdgesByType()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesbytype)
  * [getEdgeStats()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgestats)
  * [delEdges()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_deledges)
  * [edgeSetToDataFrame()](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_edgesettodataframe)


Functions to upsert, retrieve and delete edges. All functions in this module are called as methods on a [`TigerGraphConnection` object](https://docs.tigergraph.com/pytigergraph/current/core-functions/base).
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgetypes)getEdgeTypes()
`getEdgeTypes(force: bool = False) → list`
Returns the list of edge type names of the graph.
#### Parameter:
  * `force`: If `True`, forces the retrieval the schema metadata again, otherwise returns a cached copy of edge type metadata (if they were already fetched previously).


#### Returns:
The list of edge types defined in the current graph.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgetype)getEdgeType()
`getEdgeType(edgeType: str, force: bool = False) → dict`
Returns the details of the edge type.
#### Parameters:
  * `edgeType`: The name of the edge type.
  * `force`: If `True`, forces the retrieval the schema details again, otherwise returns a cached copy of edge type details (if they were already fetched previously).


#### Returns:
The metadata of the edge type.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgeattrs)getEdgeAttrs()
`getEdgeAttrs(edgeType: str) → list`
Returns the names and types of the attributes of the edge type.
#### Parameter:
  * `edgeType`: The name of the edge type.


#### Returns:
A list of (attribute_name, attribute_type) tuples. The format of attribute_type is one of - "scalar_type" - "complex_type(scalar_type)" - "map_type(key_type,value_type)" and it is a string.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesourcevertextype)getEdgeSourceVertexType()
`getEdgeSourceVertexType(edgeType: str) → Union[str, set]`
Returns the type(s) of the edge type’s source vertex.
#### Parameter:
  * `edgeType`: The name of the edge type.


#### Returns:
  * A single source vertex type name string if the edge has a single source vertex type.
  * "*" if the edge can originate from any vertex type (notation used in 2.6.1 and earlier versions). #creating-an-edge-from-or-to-any-vertex-type See [this](https://docs.tigergraph.com/v/2.6/dev/gsql-ref/ddl-and-loading/defining-a-graph-schema) for more details.
  * A set of vertex type name strings (unique values) if the edge has multiple source vertex types (notation used in 3.0 and later versions). Even if the source vertex types were defined as `"*"`, the REST API will list them as pairs (i.e. not as `"*"` in 2.6.1 and earlier versions), just like as if there were defined one by one (e.g. `FROM v1, TO v2 | FROM v3, TO v4 | …`).


The returned set contains all source vertex types, but it does not certainly mean that the edge is defined between all source and all target vertex types. You need to look at the individual source/target pairs to find out which combinations are valid/defined.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgetargetvertextype)getEdgeTargetVertexType()
`getEdgeTargetVertexType(edgeType: str) → Union[str, set]`
Returns the type(s) of the edge type’s target vertex.
#### Parameter:
  * `edgeType`: The name of the edge type.


#### Returns:
  * A single target vertex type name string if the edge has a single target vertex type.
  * "*" if the edge can end in any vertex type (notation used in 2.6.1 and earlier versions). #creating-an-edge-from-or-to-any-vertex-type See [this](https://docs.tigergraph.com/v/2.6/dev/gsql-ref/ddl-and-loading/defining-a-graph-schema) for more details.
  * A set of vertex type name strings (unique values) if the edge has multiple target vertex types (notation used in 3.0 and later versions). Even if the target vertex types were defined as "*", the REST API will list them as pairs (i.e. not as "*" in 2.6.1 and earlier versions), just like as if there were defined one by one (e.g. `FROM v1, TO v2 | FROM v3, TO v4 | …`).


The returned set contains all target vertex types, but does not certainly mean that the edge is defined between all source and all target vertex types. You need to look at the individual source/target pairs to find out which combinations are valid/defined.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_isdirected)isDirected()
`isDirected(edgeType: str) → bool`
Is the specified edge type directed?
#### Parameter:
  * `edgeType`: The name of the edge type.


#### Returns:
`True`, if the edge is directed.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getreverseedge)getReverseEdge()
`getReverseEdge(edgeType: str) → str`
Returns the name of the reverse edge of the specified edge type, if applicable.
#### Parameter:
  * `edgeType`: The name of the edge type.


#### Returns:
The name of the reverse edge, if it was defined.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_ismultiedge)isMultiEdge()
`isMultiEdge(edgeType: str) → bool`
Can the edge have multiple instances between the same pair of vertices?
#### Parameter:
  * `edgeType`: The name of the edge type.


#### Returns:
`True`, if the edge can have multiple instances between the same pair of vertices.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getdiscriminators)getDiscriminators()
`getDiscriminators(edgeType: str) → list`
Returns the names and types of the discriminators of the edge type.
#### Parameter:
  * `edgeType`: The name of the edge type.


#### Returns:
A list of (attribute_name, attribute_type) tuples.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgecountfrom)getEdgeCountFrom()
`getEdgeCountFrom(sourceVertexType: str = "", sourceVertexId: Union[str, int] = None, edgeType: str = "", targetVertexType: str = "", targetVertexId: Union[str, int] = None, where: str = "") → dict`
Returns the number of edges from a specific vertex.
#### Parameters:
  * `sourceVertexType`: The name of the source vertex type.
  * `sourceVertexId`: The primary ID value of the source vertex instance.
  * `edgeType`: The name of the edge type.
  * `targetVertexType`: The name of the target vertex type.
  * `targetVertexId`: The primary ID value of the target vertex instance.
  * `where`: A comma separated list of conditions that are all applied on each edge’s attributes. The conditions are in logical conjunction (i.e. they are "AND’ed" together).


#### Returns:
A dictionary of `edge_type: edge_count` pairs.
#### Uses:
  * If `edgeType` = "*": edge count of all edge types (no other arguments can be specified in this case).
  * If `edgeType` is specified only: edge count of the given edge type.
  * If `sourceVertexType`, `edgeType`, `targetVertexType` are specified: edge count of the given edge type between source and target vertex types.
  * If `sourceVertexType`, `sourceVertexId` are specified: edge count of all edge types from the given vertex instance.
  * If `sourceVertexType`, `sourceVertexId`, `edgeType` are specified: edge count of all edge types from the given vertex instance.
  * If `sourceVertexType`, `sourceVertexId`, `edgeType`, `where` are specified: the edge count of the given edge type after filtered by `where` condition.
  * If `targetVertexId` is specified, then `targetVertexType` must also be specified.
  * If `targetVertexType` is specified, then `edgeType` must also be specified.


#### Endpoints:
  * `GET /graph/{graph_name}/edges/{source_vertex_type}/{source_vertex_id}` #_list_edges_of_a_vertex See [this](https://docs.tigergraph.com/tigergraph-server/current/api/built-in-endpoints) for more details.
  * `POST /builtins/{graph_name}` #_run_built_in_functions_on_graph See [this](https://docs.tigergraph.com/tigergraph-server/current/api/built-in-endpoints) for more details.


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgecount)getEdgeCount()
`getEdgeCount(edgeType: str = "*", sourceVertexType: str = "", targetVertexType: str = "") → dict`
Returns the number of edges of an edge type.
This is a simplified version of `getEdgeCountFrom()`, to be used when the total number of edges of a given type is needed, regardless which vertex instance they are originated from. See documentation of `getEdgeCountFrom` above for more details.
#### Parameters:
  * `edgeType`: The name of the edge type.
  * `sourceVertexType`: The name of the source vertex type.
  * `targetVertexType`: The name of the target vertex type.


#### Returns:
A dictionary of `edge_type: edge_count` pairs.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_upsertedge)upsertEdge()
`upsertEdge(sourceVertexType: str, sourceVertexId: str, edgeType: str, targetVertexType: str, targetVertexId: str, attributes: dict = None, vertexMustExist: bool = False) → int`
Upserts an edge.
Data is upserted:
  * If edge is not yet present in graph, it will be created (see special case below).
  * If it’s already in the graph, it is updated with the values specified in the request.
  * If `vertex_must_exist` is True then edge will only be created if both vertices exists in graph. Otherwise missing vertices are created with the new edge; the newly created vertices' attributes (if any) will be created with default values.


#### Parameters:
  * `sourceVertexType`: The name of the source vertex type.
  * `sourceVertexId`: The primary ID value of the source vertex instance.
  * `edgeType`: The name of the edge type.
  * `targetVertexType`: The name of the target vertex type.
  * `targetVertexId`: The primary ID value of the target vertex instance.
  * `attributes`: A dictionary in this format:
```
{<attribute_name>, <attribute_value>|(<attribute_name>, <operator>), …}
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Example:
```
{"visits": (1482, "+"), "max_duration": (371, "max")}
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```



#operation-codes . For valid values of `<operator>` see [this](https://docs.tigergraph.com/dev/restpp-api/built-in-endpoints)
#### Returns:
A single number of accepted (successfully upserted) edges (0 or 1).
#### Endpoint:
  * `POST /graph/{graph_name}` See [this](https://docs.tigergraph.com/dev/restpp-api/built-in-endpoints#upsert-data-to-graph) for more details.


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_upsertedges)upsertEdges()
`upsertEdges(sourceVertexType: str, edgeType: str, targetVertexType: str, edges: list, vertexMustExist = False, atomic: bool = False) → int`
Upserts multiple edges (of the same type).
#### Parameters:
  * `sourceVertexType`: The name of the source vertex type.
  * `edgeType`: The name of the edge type.
  * `targetVertexType`: The name of the target vertex type.
  * `edges`: A list in of tuples in this format:
```
[
  (<source_vertex_id>, <target_vertex_id>, {<attribute_name>: <attribute_value>, …}),
  (<source_vertex_id>, <target_vertex_id>, {<attribute_name>: (<attribute_value>, <operator>), …})
  ⋮
]
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Example:
```
[
  (17, "home_page", {"visits": (35, "+"),
   "max_duration": (93, "max")}),
  (42, "search", {"visits": (17, "+"),
   "max_duration": (41, "max")})
]
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```



#operation-codes . For valid values of `<operator>` see [this](https://docs.tigergraph.com/dev/restpp-api/built-in-endpoints) * `atomic`: The request is an atomic transaction. An atomic transaction means that updates to the database contained in the request are all-or-nothing: either all changes are successful, or none are successful. This uses the `gsql-atomic-level` header, and sets the value to `atomic` if `True`, and `nonatomic` if `False`. Default is `False`.
#### Returns:
A single number of accepted (successfully upserted) edges (0 or positive integer).
#### Endpoint:
  * `POST /graph/{graph_name}` See [this](https://docs.tigergraph.com/dev/restpp-api/built-in-endpoints#upsert-data-to-graph) for more details.


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_upsertedgedataframe)upsertEdgeDataFrame()
`upsertEdgeDataFrame(df: pd.DataFrame, sourceVertexType: str, edgeType: str, targetVertexType: str, from_id: str = "", to_id: str = "", attributes: dict = None, vertexMustExist: bool = False, atomic: bool = False) → int`
Upserts edges from a Pandas DataFrame.
#### Parameters:
  * `df`: The DataFrame to upsert.
  * `sourceVertexType`: The type of source vertex for the edge.
  * `edgeType`: The type of edge to upsert data to.
  * `targetVertexType`: The type of target vertex for the edge.
  * `from_id`: The field name where the source vertex primary id is given. If omitted, the dataframe index would be used instead.
  * `to_id`: The field name where the target vertex primary id is given. If omitted, the dataframe index would be used instead.
  * `attributes`: A dictionary in the form of `{target: source}` where source is the column name in the dataframe and target is the attribute name on the edge. When omitted, all columns would be upserted with their current names. In this case column names must match the edges’s attribute names.
  * `atomic`: The request is an atomic transaction. An atomic transaction means that updates to the database contained in the request are all-or-nothing: either all changes are successful, or none are successful. This uses the `gsql-atomic-level` header, and sets the value to `atomic` if `True`, and `nonatomic` if `False`. Default is `False`.


#### Returns:
The number of edges upserted.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedges)getEdges()
`getEdges(sourceVertexType: str, sourceVertexId: str, edgeType: str = "", targetVertexType: str = "", targetVertexId: str = "", select: str = "", where: str = "", limit: Union[int, str] = None, sort: str = "", fmt: str = "py", withId: bool = True, withType: bool = False, timeout: int = 0) → Union[dict, str, pd.DataFrame]`
Retrieves edges of the given edge type originating from a specific source vertex.
Only `sourceVertexType` and `sourceVertexId` are required. If `targetVertexId` is specified, then `targetVertexType` must also be specified. If `targetVertexType` is specified, then `edgeType` must also be specified.
#### Parameters:
  * `sourceVertexType`: The name of the source vertex type.
  * `sourceVertexId`: The primary ID value of the source vertex instance.
  * `edgeType`: The name of the edge type.
  * `targetVertexType`: The name of the target vertex type.
  * `targetVertexId`: The primary ID value of the target vertex instance.
  * `select`: Comma separated list of edge attributes to be retrieved or omitted.
  * `where`: Comma separated list of conditions that are all applied on each edge’s attributes. The conditions are in logical conjunction (i.e. they are "AND’ed" together).
  * `sort`: Comma separated list of attributes the results should be sorted by.
  * `limit`: Maximum number of edge instances to be returned (after sorting).
  * `fmt`: Format of the results returned:
    * "py": Python objects
    * "json": JSON document
    * "df": pandas DataFrame
  * `withId`: (When the output format is "df") Should the source and target vertex types and IDs be included in the dataframe?
  * `withType`: (When the output format is "df") Should the edge type be included in the dataframe?
  * `timeout`: Time allowed for successful execution (0 = no time limit, default).


#### Returns:
The (selected) details of the (matching) edge instances (sorted, limited) as dictionary, JSON or pandas DataFrame.
#### Endpoint:
  * `GET /graph/{graph_name}/edges/{source_vertex_type}/{source_vertex_id}` See [this](https://docs.tigergraph.com/dev/restpp-api/built-in-endpoints#list-edges-of-a-vertex) for more details.


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesdataframe)getEdgesDataFrame()
`getEdgesDataFrame(sourceVertexType: str, sourceVertexId: str, edgeType: str = "", targetVertexType: str = "", targetVertexId: str = "", select: str = "", where: str = "", limit: Union[int, str] = None, sort: str = "", timeout: int = 0) → pd.DataFrame`
Retrieves edges of the given edge type originating from a specific source vertex.
This is a shortcut to `getEdges(…​, fmt="df", withId=True, withType=False)`. Only `sourceVertexType` and `sourceVertexId` are required. If `targetVertexId` is specified, then `targetVertexType` must also be specified. If `targetVertexType` is specified, then `edgeType` must also be specified.
#### Parameters:
  * `sourceVertexType`: The name of the source vertex type.
  * `sourceVertexId`: The primary ID value of the source vertex instance.
  * `edgeType`: The name of the edge type.
  * `targetVertexType`: The name of the target vertex type.
  * `targetVertexId`: The primary ID value of the target vertex instance.
  * `select`: Comma separated list of edge attributes to be retrieved or omitted.
  * `where`: Comma separated list of conditions that are all applied on each edge’s attributes. The conditions are in logical conjunction (i.e. they are "AND’ed" together).
  * `sort`: Comma separated list of attributes the results should be sorted by.
  * `limit`: Maximum number of edge instances to be returned (after sorting).
  * `timeout`: Time allowed for successful execution (0 = no limit, default).


#### Returns:
The (selected) details of the (matching) edge instances (sorted, limited) as dictionary, JSON or pandas DataFrame.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesdataframe_2)getEdgesDataframe()
`getEdgesDataframe(sourceVertexType: str, sourceVertexId: str, edgeType: str = "", targetVertexType: str = "", targetVertexId: str = "", select: str = "", where: str = "", limit: Union[int, str] = None, sort: str = "", timeout: int = 0) → pd.DataFrame`
DEPRECATED
Use `getEdgesDataFrame()` instead.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgesbytype)getEdgesByType()
`getEdgesByType(edgeType: str, fmt: str = "py", withId: bool = True, withType: bool = False, limit: int = None) → Union[dict, str, pd.DataFrame]`
Retrieves edges of the given edge type regardless the source vertex.
#### Parameters:
  * `edgeType`: The name of the edge type.
  * `fmt`: Format of the results returned:
    * "py": Python objects
    * "json": JSON document
    * "df": pandas DataFrame
  * `withId`: (When the output format is "df") Should the source and target vertex types and IDs be included in the dataframe?
  * `withType`: (When the output format is "df") should the edge type be included in the dataframe?
  * `limit`: Maximum number of edge instances to be returned. Default is None (no limit). **Note:** The limit is applied after retrieving the edges, so the load on the database is not reduced.


#### Returns:
The details of the edge instances of the given edge type as dictionary, JSON or pandas DataFrame.
## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_getedgestats)getEdgeStats()
`getEdgeStats(edgeTypes: Union[str, list], skipNA: bool = False) → dict`
Returns edge attribute statistics.
#### Parameters:
  * `edgeTypes`: A single edge type name or a list of edges types names or '*' for all edges types.
  * `skipNA`: Skip those edges that do not have attributes or none of their attributes have statistics gathered.


#### Returns:
Attribute statistics of edges; a dictionary of dictionaries.
#### Endpoint:
  * `POST /builtins/{graph_name}` See [this](https://docs.tigergraph.com/dev/restpp-api/built-in-endpoints#run-built-in-functions-on-graph) for more details.


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_deledges)delEdges()
`delEdges(sourceVertexType: str, sourceVertexId: str, edgeType: str = "", targetVertexType: str = "", targetVertexId: str = "", where: str = "", limit: str = "", sort: str = "", timeout: int = 0) → dict`
Deletes edges from the graph.
Only `sourceVertexType` and `sourceVertexId` are required. If `targetVertexId` is specified, then `targetVertexType` must also be specified. If `targetVertexType` is specified, then `edgeType` must also be specified.
#### Parameters:
  * `sourceVertexType`: The name of the source vertex type.
  * `sourceVertexId`: The primary ID value of the source vertex instance.
  * `edgeType`: The name of the edge type.
  * `targetVertexType`: The name of the target vertex type.
  * `targetVertexId`: The primary ID value of the target vertex instance.
  * `where`: Comma separated list of conditions that are all applied on each edge’s attributes. The conditions are in logical conjunction (they are connected as if with an `AND` statement).
  * `limit`: Maximum number of edge instances to be returned after sorting.
  * `sort`: Comma-separated list of attributes the results should be sorted by.
  * `timeout`: Time allowed for successful execution. The default is `0`, or no limit.


#### Returns:
A dictionary of `edge_type: deleted_edge_count` pairs.
#### Endpoint:
  * `DELETE /graph/{graph_name}/edges/{source_vertex_type}/{source_vertex_id}/{edge_type}/{target_vertex_type}/{target_vertex_id}` See [this](https://docs.tigergraph.com/dev/restpp-api/built-in-endpoints#delete-an-edge) for more details.


## [](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge#_edgesettodataframe)edgeSetToDataFrame()
`edgeSetToDataFrame(edgeSet: list, withId: bool = True, withType: bool = False) → pd.DataFrame`
Converts an edge set to a pandas DataFrame.
#### Parameters:
  * `edgeSet`: The edge set to convert.
  * `withId`: Should the source and target vertex types and IDs be included in the dataframe?
  * `withType`: Should the edge type be included in the dataframe?


#### Returns:
The edge set as a pandas DataFrame.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


